--- a/manifest/Jenkinsfile
+++ b/manifest/Jenkinsfile
@@ -18,11 +18,11 @@ pipeline {
         }
         stage("Update the Deployment Tags") {
             steps {
-                def deploymentFile = "manifest/deployment.yaml"
                 sh """
-                    cat ${deploymentFile}
-                    sed -i 's/${APP_NAME}.*/${APP_NAME}:${IMAGE_TAG}/g' ${deploymentFile}
-                    cat ${deploymentFile}
+                    deploymentFile="manifest/deployment.yaml"
+                    cat $deploymentFile
+                    sed -i 's/${APP_NAME}.*/${APP_NAME}:${IMAGE_TAG}/g' $deploymentFile
+                    cat $deploymentFile
                 """
             }
         }
