--- a/manifest/Jenkinsfile
+++ b/manifest/Jenkinsfile
@@ -19,10 +19,9 @@ pipeline {
         stage("Update the Deployment Tags") {
             steps {
                 sh """
-                    deploymentFile="manifest/deployment.yaml"
-                    cat $deploymentFile
-                    sed -i 's/${APP_NAME}.*/${APP_NAME}:${IMAGE_TAG}/g' $deploymentFile
-                    cat $deploymentFile
+                    cat manifest/deployment.yaml
+                    sed -i 's/${APP_NAME}.*/${APP_NAME}:${IMAGE_TAG}/g' manifest/deployment.yaml
+                    cat manifest/deployment.yaml
                 """
             }
         }
